<resources>
    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_log_out">Log out</string>
    <string name="action_empty_database">Empty Database</string>
    <string name="fragment_add_textview_title">Title: </string>
    <string name="fragment_add_textview_amount">Amount:</string>
    <string name="google_maps_key">AIzaSyA1bKn_rVI-i4uUrHfm4iziE6Hj8aSeVbk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_user_textview_username">Username:</string>
    <string name="fragment_user_textview_password">Password:</string>
    <string name="fragment_user_button_login">Log in</string>
    <string name="fragment_user_button_create_user">Create user</string>
    <string name="fragment_add_button_cartegory">Category</string>
    <string name="fragment_add_button_date">Date</string>
    <string name="fragment_add_button_finish">Add Expense</string>
    <string name="action_add_text">Add</string>
    <string name="action_currency_converter">Currency converter</string>
</resources>
