<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/action_empty_database"
        android:title="@string/action_empty_database"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_currency_converter"
        android:title="@string/action_currency_converter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/calculator"/>

    <item android:id="@+id/action_add_to_list"
        android:title="@string/action_add_text"
        app:showAsAction="ifRoom"
        android:icon="@drawable/add"/>

</menu>
