<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mah.ae2942.project.AddFragment"
    android:orientation="vertical"
    android:id="@+id/fragment_add_layout"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginBottom="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_add_textview_title"
            android:text="@string/fragment_add_textview_title"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textStyle="italic"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_add_edittext_title"
            android:layout_marginRight="10dp"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_add_textview_amount"
            android:text="@string/fragment_add_textview_amount"
            android:layout_marginRight="10dp"
            android:textStyle="italic"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_add_edittext_amount"
            android:layout_marginRight="10dp"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_add_button_cartegory"
            android:id="@+id/fragment_add_button_category"
            android:layout_margin="5dp"
            android:fontFamily="@string/common_google_play_services_install_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/fragment_add_button_date"
            android:text="@string/fragment_add_button_date"
            android:layout_margin="5dp"
            android:fontFamily="@string/common_google_play_services_install_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_add_button_finish"
            android:id="@+id/fragment_add_button_finish"
            android:layout_margin="5dp"
            android:fontFamily="@string/common_google_play_services_install_button"/>

    </LinearLayout>

</LinearLayout>
